--- a/app/templates/swagger-ui.html
+++ b/app/templates/swagger-ui.html
@@ -13,13 +13,13 @@
                 supportedSubmitMethods: ['get', 'post', 'put', 'delete', 'patch'],
                 onComplete: function(swaggerApi, swaggerUi){
                     if(typeof initOAuth == "function") {
-                        initOAuth({
-                            clientId: "docs",
-                            realm: "your-realms",
-                            appName: "swagger-docs"
-                            //realm: "Flask-RESTplus Example server docs",
-                            //appName: "Flask-RESTplus Example server"
-                        });
+                        {% if config.SWAGGER_UI_OAUTH_CLIENT_ID -%}
+                            initOAuth({
+                                clientId: "{{ config.SWAGGER_UI_OAUTH_CLIENT_ID }}",
+                                realm: "{{ config.SWAGGER_UI_OAUTH_REALM }}",
+                                appName: "{{ config.SWAGGER_UI_OAUTH_APP_NAME }}"
+                            });
+                        {%- endif %}
                     }
                     $('pre code').each(function(i, e) {
                         hljs.highlightBlock(e)
