Closes #10: Great refactoring of Auth module

--- a/app/templates/swagger-ui.html
+++ b/app/templates/swagger-ui.html
@@ -5,6 +5,36 @@
     {% include 'swagger-ui-css.html' %}
     {% include 'swagger-ui-libs.html' %}
     <script type="text/javascript">
+        // NOTE: `onOAuthComplete` implementation is extracted from the deprecated swagger-ui/lib/swagger-oauth.js
+        onOAuthComplete = function onOAuthComplete(token, OAuthSchemeKey) {
+
+          if (token === '') {
+            alert("Authorization failed for unknown reason, please, check your credentials!")
+            return
+          }
+
+          if(token.error) {
+            var checkbox = $('input[type=checkbox],.secured')
+            checkbox.each(function(pos) {
+                checkbox[pos].checked = false
+            })
+            alert(token.error)
+          }
+          else {
+            var access_token = token[window.swaggerUi.tokenName]
+
+            if (!OAuthSchemeKey) {
+              OAuthSchemeKey = token.state;
+            }
+
+            if(access_token) {
+              // if all roles are satisfied
+              window.swaggerUi.api.clientAuthorizations.add(OAuthSchemeKey, new SwaggerClient.ApiKeyAuthorization('Authorization', 'Bearer ' + access_token, 'header'))
+              window.swaggerUi.load()
+            }
+          }
+        }
+
         $(function () {
             window.swaggerUi = new SwaggerUi({
                 url: "{{ specs_url }}",
@@ -37,6 +67,14 @@
 </head>
 
 <body class="swagger-section">
+    <div id="header">
+        <div class="swagger-ui-wrap">
+            <a id="logo"><span class="logo__title">Flask-RESTplus Example API</span></a>
+            <form id="api_selector">
+                <div id="auth_container"></div>
+            </form>
+        </div>
+    </div>
     <div id="message-bar" class="swagger-ui-wrap">&nbsp;</div>
     <div id="swagger-ui-container" class="swagger-ui-wrap"></div>
 </body>
