Migrate to upstream Swagger-UI 2.2.10 instead of a forked version (OAuth2 Password Flow has been merged into 2.2.9 release)

--- a/app/templates/swagger-ui.html
+++ b/app/templates/swagger-ui.html
@@ -21,7 +21,7 @@
             alert(token.error)
           }
           else {
-            var access_token = token[window.swaggerUi.tokenName]
+            var access_token = token[window.swaggerUiAuth.tokenName]
 
             if (!OAuthSchemeKey) {
               OAuthSchemeKey = token.state;
