Working pretty well - moved oauth2 models and extension to proper filenames. Tests are mostly failing due to the problems I was having with sessions, but also because there is no OAuth2Grant, and also Flask-login anonymous users seem to be handled differently.

--- a/app/templates/authorize.html
+++ b/app/templates/authorize.html
@@ -7,10 +7,13 @@
     <input type="checkbox" name="confirm">
     <span>Consent?</span>
   </label>
-  {% if not user %}
+  {% if not user or not user.is_authenticated %}
   <p>You haven't logged in. Log in with:</p>
   <div>
-    <input type="text" name="username">
+    Username: <input type="text" name="username">
+  </div>
+  <div>
+    Password: <input type="password" name="password">
   </div>
   {% endif %}
   <br>
