--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -12,8 +12,8 @@
 
 {% block content %}
   <div>
-    <a class="navbar-brand" href="{{ url_for('houston.home') }}">
-      <img src="{{ url_for('houston.static', filename='images/icon.png', version=cachebuster) }}" width="50" height="50" alt="">
+    <a class="navbar-brand" href="{{ url_for('backend.home') }}">
+      <img src="{{ url_for('backend.static', filename='images/icon.png', version=cachebuster) }}" width="50" height="50" alt="">
       <h1>Houston</h1>
       <h2>by Wild Me</h2>   
     </a>
