--- a/app/templates/home.login.html
+++ b/app/templates/home.login.html
@@ -1,6 +1,6 @@
 <h2 style="margin: 0px; font-weight: bold;">Sign in</h2>
 
-<form class="needs-validation" action="{{ url_for('houston.user_login') }}" method="post" novalidate>
+<form class="needs-validation" action="{{ url_for('backend.user_login') }}" method="post" novalidate>
   <label for="email-address">Email Address</label>
   <input name="email" id="email-address" placeholder="Email address of user" type="email" autofocus="autofocus" autocomplete="username" onfocus="this.select()" required>
   <br/>
