--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -19,28 +19,28 @@
     </script>
 
     <!-- generics -->
-    <link rel="icon" type="image/png" href="{{ url_for('houston.static', filename='favicon/favicon-32.png', version=cachebuster) }}" sizes="32x32">
-    <link rel="icon" type="image/png" href="{{ url_for('houston.static', filename='favicon/favicon-57.png', version=cachebuster) }}" sizes="57x57">
-    <link rel="icon" type="image/png" href="{{ url_for('houston.static', filename='favicon/favicon-76.png', version=cachebuster) }}" sizes="76x76">
-    <link rel="icon" type="image/png" href="{{ url_for('houston.static', filename='favicon/favicon-96.png', version=cachebuster) }}" sizes="96x96">
-    <link rel="icon" type="image/png" href="{{ url_for('houston.static', filename='favicon/favicon-128.png', version=cachebuster) }}" sizes="128x128">
-    <link rel="icon" type="image/png" href="{{ url_for('houston.static', filename='favicon/favicon-192.png', version=cachebuster) }}" sizes="192x192">
-    <link rel="icon" type="image/png" href="{{ url_for('houston.static', filename='favicon/favicon-228.png', version=cachebuster) }}" sizes="228x228">
+    <link rel="icon" type="image/png" href="{{ url_for('backend.static', filename='favicon/favicon-32.png', version=cachebuster) }}" sizes="32x32">
+    <link rel="icon" type="image/png" href="{{ url_for('backend.static', filename='favicon/favicon-57.png', version=cachebuster) }}" sizes="57x57">
+    <link rel="icon" type="image/png" href="{{ url_for('backend.static', filename='favicon/favicon-76.png', version=cachebuster) }}" sizes="76x76">
+    <link rel="icon" type="image/png" href="{{ url_for('backend.static', filename='favicon/favicon-96.png', version=cachebuster) }}" sizes="96x96">
+    <link rel="icon" type="image/png" href="{{ url_for('backend.static', filename='favicon/favicon-128.png', version=cachebuster) }}" sizes="128x128">
+    <link rel="icon" type="image/png" href="{{ url_for('backend.static', filename='favicon/favicon-192.png', version=cachebuster) }}" sizes="192x192">
+    <link rel="icon" type="image/png" href="{{ url_for('backend.static', filename='favicon/favicon-228.png', version=cachebuster) }}" sizes="228x228">
 
     <!-- Android -->
-    <link rel="shortcut icon" type="image/png" sizes="196x196" href="{{ url_for('houston.static', filename='favicon/favicon-196.png', version=cachebuster) }}">
+    <link rel="shortcut icon" type="image/png" sizes="196x196" href="{{ url_for('backend.static', filename='favicon/favicon-196.png', version=cachebuster) }}">
 
     <!-- iOS -->
-    <link rel="apple-touch-icon" type="image/png" href="{{ url_for('houston.static', filename='favicon/favicon-120.png', version=cachebuster) }}" sizes="120x120">
-    <link rel="apple-touch-icon" type="image/png" href="{{ url_for('houston.static', filename='favicon/favicon-152.png', version=cachebuster) }}" sizes="152x152">
-    <link rel="apple-touch-icon" type="image/png" href="{{ url_for('houston.static', filename='favicon/favicon-180.png', version=cachebuster) }}" sizes="180x180">
+    <link rel="apple-touch-icon" type="image/png" href="{{ url_for('backend.static', filename='favicon/favicon-120.png', version=cachebuster) }}" sizes="120x120">
+    <link rel="apple-touch-icon" type="image/png" href="{{ url_for('backend.static', filename='favicon/favicon-152.png', version=cachebuster) }}" sizes="152x152">
+    <link rel="apple-touch-icon" type="image/png" href="{{ url_for('backend.static', filename='favicon/favicon-180.png', version=cachebuster) }}" sizes="180x180">
 
     <!-- Windows 8 IE 10-->
     <meta name="msapplication-TileColor" content="#FFFFFF">
-    <meta name="msapplication-TileImage" content="{{ url_for('houston.static', filename='favicon/favicon-144.png', version=cachebuster) }}">
+    <meta name="msapplication-TileImage" content="{{ url_for('backend.static', filename='favicon/favicon-144.png', version=cachebuster) }}">
 
     <!-- Windows 8.1 + IE11 and above -->
-    <meta name="msapplication-config" content="{{ url_for('houston.static', filename='favicon/browserconfig.xml', version=cachebuster) }}">
+    <meta name="msapplication-config" content="{{ url_for('backend.static', filename='favicon/browserconfig.xml', version=cachebuster) }}">
     {% endblock %}
 
     {% block style %}{% endblock %}
