Fixed frontend handling for static files with React

--- a/app/templates/home.jinja2
+++ b/app/templates/home.jinja2
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "layout.jinja2" %}
 
 {% block title %}Home{% endblock %}
 
@@ -23,9 +23,9 @@
     Version {{ version }}
   </div>
 
-  {% include "home.login.html" %}
+  {% include "home.login.jinja2" %}
 
-  {% include "home.logout.html" %}
+  {% include "home.logout.jinja2" %}
 
 {% endblock %}
 
