--- a/app/templates/swagger-ui.html
+++ b/app/templates/swagger-ui.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "layout.jinja2" %}
 
 {% block title %}Documentation{% endblock %}
 
@@ -7,11 +7,11 @@
 {% endblock %}
 
 {% block style %}
-  <link media="screen" rel="stylesheet" type="text/css" href="{{ swagger_static('bower/swagger-ui/dist/css/typography.css') }}" />
-  <link media="screen" rel="stylesheet" type="text/css" href="{{ swagger_static('bower/swagger-ui/dist/css/reset.css') }}" />
-  <link media="screen" rel="stylesheet" type="text/css" href="{{ swagger_static('bower/swagger-ui/dist/css/screen.css') }}" />
-  <link media="print"  rel="stylesheet" type="text/css" href="{{ swagger_static('bower/swagger-ui/dist/css/reset.css') }}" />
-  <link media="print"  rel="stylesheet" type="text/css" href="{{ swagger_static('bower/swagger-ui/dist/css/screen.css') }}" />
+  <link media="screen" rel="stylesheet" type="text/css" href="{{ swagger_static('css/typography.css') }}" />
+  <link media="screen" rel="stylesheet" type="text/css" href="{{ swagger_static('css/reset.css') }}" />
+  <link media="screen" rel="stylesheet" type="text/css" href="{{ swagger_static('css/screen.css') }}" />
+  <link media="print"  rel="stylesheet" type="text/css" href="{{ swagger_static('css/reset.css') }}" />
+  <link media="print"  rel="stylesheet" type="text/css" href="{{ swagger_static('css/screen.css') }}" />
 
   <style type="text/css">
     #content {
@@ -40,20 +40,20 @@
 {% block foot %}{% endblock %}
 
 {% block script %}
-  <script src="{{ swagger_static('bower/swagger-ui/dist/lib/jquery-1.8.0.min.js') }}" type="text/javascript"></script>
-  <script src="{{ swagger_static('bower/swagger-ui/dist/lib/jquery.slideto.min.js') }}" type="text/javascript"></script>
-  <script src="{{ swagger_static('bower/swagger-ui/dist/lib/jquery.wiggle.min.js') }}" type="text/javascript"></script>
-  <script src="{{ swagger_static('bower/swagger-ui/dist/lib/jquery.ba-bbq.min.js') }}" type="text/javascript"></script>
-  <script src="{{ swagger_static('bower/swagger-ui/dist/lib/handlebars-4.0.5.js') }}" type="text/javascript"></script>
-  <script src="{{ swagger_static('bower/swagger-ui/dist/lib/lodash.min.js') }}" type="text/javascript"></script>
-  <script src="{{ swagger_static('bower/swagger-ui/dist/lib/backbone-min.js') }}" type="text/javascript"></script>
-  <script src="{{ swagger_static('bower/swagger-ui/dist/lib/highlight.9.1.0.pack.js') }}" type="text/javascript"></script>
-  <script src="{{ swagger_static('bower/swagger-ui/dist/lib/jsoneditor.min.js') }}" type='text/javascript'></script>
-  <script src="{{ swagger_static('bower/swagger-ui/dist/lib/marked.js') }}" type="text/javascript"></script>
-  <script src="{{ swagger_static('bower/swagger-ui/dist/swagger-ui.min.js') }}" type="text/javascript"></script>
+  <script src="{{ swagger_static('lib/jquery-1.8.0.min.js') }}" type="text/javascript"></script>
+  <script src="{{ swagger_static('lib/jquery.slideto.min.js') }}" type="text/javascript"></script>
+  <script src="{{ swagger_static('lib/jquery.wiggle.min.js') }}" type="text/javascript"></script>
+  <script src="{{ swagger_static('lib/jquery.ba-bbq.min.js') }}" type="text/javascript"></script>
+  <script src="{{ swagger_static('lib/handlebars-4.0.5.js') }}" type="text/javascript"></script>
+  <script src="{{ swagger_static('lib/lodash.min.js') }}" type="text/javascript"></script>
+  <script src="{{ swagger_static('lib/backbone-min.js') }}" type="text/javascript"></script>
+  <script src="{{ swagger_static('lib/highlight.9.1.0.pack.js') }}" type="text/javascript"></script>
+  <script src="{{ swagger_static('lib/jsoneditor.min.js') }}" type='text/javascript'></script>
+  <script src="{{ swagger_static('lib/marked.js') }}" type="text/javascript"></script>
+  <script src="{{ swagger_static('swagger-ui.min.js') }}" type="text/javascript"></script>
 
   <!-- enabling this will enable oauth2 implicit scope support -->
-  <!--script src="{{ swagger_static('bower/swagger-ui/dist/lib/swagger-oauth.js') }}" type="text/javascript"></script-->
+  <!--script src="{{ swagger_static('lib/swagger-oauth.js') }}" type="text/javascript"></script-->
 
   <script type="text/javascript">
     // NOTE: `onOAuthComplete` implementation is extracted from the deprecated swagger-ui/lib/swagger-oauth.js
