--- a/tasks/app/boilerplates_templates/crud_module/models.py.jinja2
+++ b/tasks/app/boilerplates_templates/crud_module/models.py.jinja2
@@ -8,28 +8,32 @@ from sqlalchemy_utils import Timestamp
 
 from app.extensions import db
 
+import uuid
+
 
 class {{ model_name }}(db.Model, Timestamp):
     """
     {{ module_title }} database model.
     """
 
-    id = db.Column(db.Integer, primary_key=True) # pylint: disable=invalid-name
+    guid = db.Column(
+        db.GUID, default=uuid.uuid4, primary_key=True
+    )  # pylint: disable=invalid-name
     title = db.Column(db.String(length=50), nullable=False)
 
     def __repr__(self):
         return (
-            "<{class_name}("
-            "id={self.id}, "
-            "title=\"{self.title}\""
-            ")>".format(
+            '<{class_name}('
+            'guid={self.id}, '
+            'title=\'{self.title}\''
+            ')>'.format(
                 class_name=self.__class__.__name__,
                 self=self
             )
         )
 
     @db.validates('title')
-    def validate_title(self, key, title): # pylint: disable=unused-argument,no-self-use
+    def validate_title(self, key, title):  # pylint: disable=unused-argument,no-self-use
         if len(title) < 3:
-            raise ValueError("Title has to be at least 3 characters long.")
+            raise ValueError('Title has to be at least 3 characters long.')
         return title
