--- a/tasks/app/boilerplates_templates/crud_module/parameters.py.jinja2
+++ b/tasks/app/boilerplates_templates/crud_module/parameters.py.jinja2
@@ -1,4 +1,4 @@
-# encoding: utf-8
+# -*- coding: utf-8 -*-
 """
 Input arguments (Parameters) for {{ module_title }} resources RESTful API
 -----------------------------------------------------------
