--- a/tasks/app/boilerplates_templates/crud_module/__init__.py.jinja2
+++ b/tasks/app/boilerplates_templates/crud_module/__init__.py.jinja2
@@ -16,6 +16,6 @@ def init_app(app, **kwargs):
     api_v1.add_oauth_scope('{{ module_namespace }}:write', 'Provide write access to {{ module_title }} details')
 
     # Touch underlying modules
-    from . import models, resources
+    from . import models, resources  # NOQA
 
     api_v1.add_namespace(resources.api)
