--- a/app/templates/layout.jinja2
+++ b/app/templates/layout.jinja2
@@ -41,12 +41,39 @@
 
     <!-- Windows 8.1 + IE11 and above -->
     <meta name="msapplication-config" content="{{ url_for('backend.static', filename='favicon/browserconfig.xml', version=cachebuster) }}">
+
+    <!-- CSS Styling -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="{{ url_for('backend.static', filename='css/style.css', version=cachebuster) }}">
+
     {% endblock %}
 
     {% block style %}{% endblock %}
   </head>
   
   <body>
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">
+        Houston
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="/api/v1/">API</a>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </div>
+    </nav>
+
     <div id="messages"></div>
 
     <div id="content">
@@ -57,12 +84,31 @@
 
     <div id="footer">
       {% block footer %}{% endblock %}
+
+      <div class="fixed-bottom">
+        <div class="row">
+          <div class="col-3">
+          </div>
+          <div class="col-6"></div>
+          <div class="col-3">
+            <nav class="nav nav-pills flex-column flex-sm-row" style="margin: 10px;">
+              <a class="flex-sm-fill text-sm-center nav-link active" href="#">Version {{ version }}</a>
+            </nav>
+          </div>
+        </div>
+      </div>
+
     </div>
  
   </body>
 
   {% block foot %}
-  <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+
   {% endblock %}
 
   {% block script %}{% endblock %}
