Fixes for small alyout issues

--- a/app/templates/home.jinja2
+++ b/app/templates/home.jinja2
@@ -30,6 +30,19 @@
     </div>
   </div>
 
+  <div class="fixed-bottom">
+    <div class="row">
+      <div class="col-3">
+      </div>
+      <div class="col-6"></div>
+      <div class="col-3">
+        <nav class="nav nav-pills flex-column flex-sm-row" style="margin: 10px;">
+          <a class="flex-sm-fill text-sm-center nav-link active" href="https://github.com/wildbookorg/houston">Version {{ version }}</a>
+        </nav>
+      </div>
+    </div>
+  </div>
+
 {% endblock %}
 
 {% block foot %}
