--- a/app/templates/layout.jinja2
+++ b/app/templates/layout.jinja2
@@ -53,6 +53,9 @@
   
   <body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="{{ url_for('frontend.home') }}">
+        Frontend
+      </a>
       <a class="navbar-brand" href="{{ url_for('backend.home') }}">
         Houston
       </a>
